Fix container height and prevent layout shifts on page load

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -30,7 +30,7 @@
 }
 
 .navLinks .activeLink {
-  color: #8a2be2; 
+  color: #5f33e1; 
 }
 
 .navLinks a:not(.activeLink) .icon {
